@startuml simple
package users {
  class CustomUser
  class Student
  class Professor
  class Administrator
}

package academics {
  class Faculty
  class Career
  class Subject
  class FinalExam
  class Grade
}

package inscriptions {
  class SubjectInscription
  class FinalExamInscription
}


CustomUser "1" -- "0..1" Student
CustomUser "1" -- "0..1" Professor
CustomUser "1" -- "0..1" Administrator

Student "*" -- "1" Career
Professor "*" -- "*" Subject
Professor "*" -- "*" FinalExam

Career "*" -- "1" Faculty
Subject "*" -- "1" Career
FinalExam "*" -- "1" Subject
Grade "*" -- "1" Student
Grade "*" -- "1" Subject

SubjectInscription "*" -- "1" Student
SubjectInscription "*" -- "1" Subject

FinalExamInscription "*" -- "1" Student
FinalExamInscription "*" -- "1" FinalExam

@enduml
